--- a/src/board.css
+++ b/src/board.css
@@ -7,5 +7,5 @@
 #game-title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    color:white;
+    color:gold;
 }
